# guitar-dispo

./: .gitignore  README.md  filter.m  print_fir_coeffs.m
audio_nucleo/: .cproject  .mxproject  .project  audio_nucleo.ioc  audio_nucleo.launch
audio_nucleo/Core/Inc/: bandpass_filter.h  cli.h  cli.hpp  cli_os.hpp  filter.hpp  fir_filter_coeffs.h  lowpass_filter.h  (+5 more)
audio_nucleo/Debug/: makefile  objects.list
doc/: usage.md
doc/report/: README.md  lit.bib  main.tex  notes.txt
hardware/: bom.txt  hardware.ioc
hardware/dispo-board/: audio.kicad_sch  bom.csv  bom_expanded.csv  bom_expanded.ods  connectors.kicad_sch  dispo-board.kicad_pcb  dispo-board.kicad_prl  dispo-board.kicad_pro  dispo-board.kicad_sch  dispo-board.xml  fp-info-cache  power.kicad_sch  ~dispo-board.kicad_sch.lck
report/: lit.bib  notes.txt
report/inc/: meta.tex
report/misc/: double_buffering.graphml
report/sources/: acro.tex  basics.tex  concept.tex  goal.tex  introduction.tex  titlepage.tex
scripts/: analog_bandpass.csv  biquad.py  filter_coeffs.h  filter_comparison.ipynb  filterdesign_fir.py  filterdesign_iir.py  requirements.txt
software/: .cproject  .mxproject  .project  CMakeLists.txt  STM32H725RGVX_FLASH.ld  STM32H725RGVX_RAM.ld  STM32H725XG_FLASH.ld  STM32H725XG_FLASH_new.ld  dispo.ioc  dispo.launch
software/audio/: CMakeLists.txt  audio_proc.cpp  audio_proc.hpp  biquad_filter.hpp  delayline.hpp  effects.hpp  effectschain.hpp  filter.hpp  fir_filter_coeffs.c  fir_filter_coeffs.h  iir_filter_coeffs.h  ringbuffer.hpp
software/cmake/: gcc-arm-none-eabi.cmake  starm-clang.cmake
(+68 files in other folders)
